--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.18.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
